BusinessRules/gen/rules/BusinessRulesParser.java
// Generated from /Users/unggi/GitHub/Shared-Work/BusinessRules/src/main/antlr/BusinessRules.g4 by ANTLR 4.5.1
package rules;

import codegen.symbols.Symbol;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.Collections;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BusinessRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, T__65=66,
			T__66 = 67, T__67 = 68, T__68 = 69, T__69 = 70, T__70 = 71, T__71 = 72, THE = 73, AN = 74,
			FragmentName = 75, IsEqualTo = 76, IsNotEqualTo = 77, IsGreaterThan = 78, IsLessThanOrEqualTo = 79,
			IsGreaterThanOrEqualTo = 80, IsLessThan = 81, BooleanLiteral = 82, LiteralString = 83,
			DoubleQuotedString = 84, ModelElementName = 85, VariableName = 86, Number = 87,
			OrdinalNumber = 88, IntegerNumber = 89, OperatorName = 90, COMMENT = 91, LINE_COMMENT = 92,
			WS = 93;
	public static final int
		RULE_fileBody = 0, RULE_modelFileReferences = 1, RULE_modelFileReference = 2, 
		RULE_declarations = 3, RULE_declaration = 4, RULE_validationRule = 5, 
		RULE_definition = 6, RULE_ruleSet = 7, RULE_context = 8, RULE_multipleParameterContext = 9, 
		RULE_multipleContextParameter = 10, RULE_modelReferenceParameter = 11, 
		RULE_constraint = 12, RULE_binaryLogicalOperator = 13, RULE_logicalStatement = 14, 
		RULE_simpleOrComplexConstraint = 15, RULE_predicate = 16, RULE_comparator = 17, 
		RULE_listDefinition = 18, RULE_multipleExistsStatement = 19, RULE_multipleNotExistsStatement = 20, 
		RULE_expression = 21, RULE_term = 22, RULE_identifier = 23, RULE_functionalExpression = 24, 
		RULE_operatorInvocation = 25, RULE_operatorParameterList = 26, RULE_definitionApplication = 27, 
		RULE_collectionIndex = 28, RULE_castExpression = 29, RULE_selectionExpression = 30, 
		RULE_modelReference = 31, RULE_modelReferenceList = 32, RULE_dottedModelPath = 33, 
		RULE_propertyOfModelPath = 34, RULE_compoundReport = 35, RULE_simpleReport = 36, 
		RULE_concatenatedReport = 37, RULE_conditionalReport = 38, RULE_simpleTerm = 39, 
		RULE_collectionMemberConstraint = 40, RULE_existsStatement = 41, RULE_enumerator = 42, 
		RULE_notExistsStatement = 43, RULE_forallStatement = 44;
	public static final String[] ruleNames = {
		"fileBody", "modelFileReferences", "modelFileReference", "declarations", 
		"declaration", "validationRule", "definition", "ruleSet", "context", "multipleParameterContext", 
		"multipleContextParameter", "modelReferenceParameter", "constraint", "binaryLogicalOperator", 
		"logicalStatement", "simpleOrComplexConstraint", "predicate", "comparator", 
		"listDefinition", "multipleExistsStatement", "multipleNotExistsStatement", 
		"expression", "term", "identifier", "functionalExpression", "operatorInvocation", 
		"operatorParameterList", "definitionApplication", "collectionIndex", "castExpression", 
		"selectionExpression", "modelReference", "modelReferenceList", "dottedModelPath", 
		"propertyOfModelPath", "compoundReport", "simpleReport", "concatenatedReport", 
		"conditionalReport", "simpleTerm", "collectionMemberConstraint", "existsStatement", 
		"enumerator", "notExistsStatement", "forallStatement"
	};

	private static final String[] _LITERAL_NAMES = {
			null, "'Model'", "'Validation:'", "'report:'", "'Definition:'", "'Given:'",
			"'Value:'", "'Rule set'", "'applies to'", "'where'", "'Context:'", "','",
			"'('", "')'", "'Constraint:'", "'If'", "'then'", "'else'", "'and'", "'or'",
			"'implies'", "'if and only if'", "'is one of'", "'is not one of'", "'is a kind of'",
		"'following'", "'is present'", "'are present'", "':'", "'is not present'", 
		"'are not present'", "'*'", "'/'", "'+'", "'-'", "'mod'", "'sum of'", 
		"'number of'", "'number of unique'", "'by'", "'from'", "'to'", "'with'", 
		"'using'", "'of'", "'as a'", "'as an'", "'first'", "'.'", "'report'", 
		"'if'", "';'", "'of the'", "'has'", "'have'", "'is'", "'are'", "'present'", 
		"'at least'", "'at most'", "'exactly'", "'one'", "'two'", "'three'", "'four'", 
		"'no'", "'none'", "'each'", "'in each'", "'all'", "'every'", "'for each'", 
		"'in the collection of'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null,
			null, null, null, null, null, null, null, null, null, null, null, null,
			null, "THE", "AN", "FragmentName", "IsEqualTo", "IsNotEqualTo", "IsGreaterThan",
			"IsLessThanOrEqualTo", "IsGreaterThanOrEqualTo", "IsLessThan", "BooleanLiteral",
			"LiteralString", "DoubleQuotedString", "ModelElementName", "VariableName",
			"Number", "OrdinalNumber", "IntegerNumber", "OperatorName", "COMMENT",
			"LINE_COMMENT", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "BusinessRules.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BusinessRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileBodyContext extends ParserRuleContext {
		public ModelFileReferencesContext modelFileReferences() {
			return getRuleContext(ModelFileReferencesContext.class,0);
		}
		public DeclarationsContext declarations() {
			return getRuleContext(DeclarationsContext.class,0);
		}
		public FileBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fileBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterFileBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitFileBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitFileBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileBodyContext fileBody() throws RecognitionException {
		FileBodyContext _localctx = new FileBodyContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_fileBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			modelFileReferences();
			setState(91);
			declarations();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelFileReferencesContext extends ParserRuleContext {
		public List<ModelFileReferenceContext> modelFileReference() {
			return getRuleContexts(ModelFileReferenceContext.class);
		}
		public ModelFileReferenceContext modelFileReference(int i) {
			return getRuleContext(ModelFileReferenceContext.class,i);
		}
		public ModelFileReferencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelFileReferences; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterModelFileReferences(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitModelFileReferences(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitModelFileReferences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelFileReferencesContext modelFileReferences() throws RecognitionException {
		ModelFileReferencesContext _localctx = new ModelFileReferencesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_modelFileReferences);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(93);
				modelFileReference();
				}
				}
				setState(96); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__0 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelFileReferenceContext extends ParserRuleContext {
		public TerminalNode DoubleQuotedString() { return getToken(BusinessRulesParser.DoubleQuotedString, 0); }
		public ModelFileReferenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modelFileReference; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterModelFileReference(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitModelFileReference(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitModelFileReference(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelFileReferenceContext modelFileReference() throws RecognitionException {
		ModelFileReferenceContext _localctx = new ModelFileReferenceContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_modelFileReference);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__0);
			setState(99);
			match(DoubleQuotedString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationsContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public DeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationsContext declarations() throws RecognitionException {
		DeclarationsContext _localctx = new DeclarationsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_declarations);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__1 || _la==T__3) {
				{
				{
				setState(101);
				declaration();
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public ValidationRuleContext validationRule() {
			return getRuleContext(ValidationRuleContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_declaration);
		try {
			setState(109);
			switch (_input.LA(1)) {
			case T__3:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				definition();
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				validationRule();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValidationRuleContext extends ParserRuleContext {
		public Token name;
		public ContextContext context() {
			return getRuleContext(ContextContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public TerminalNode DoubleQuotedString() { return getToken(BusinessRulesParser.DoubleQuotedString, 0); }
		public CompoundReportContext compoundReport() {
			return getRuleContext(CompoundReportContext.class,0);
		}
		public ValidationRuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_validationRule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterValidationRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitValidationRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitValidationRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValidationRuleContext validationRule() throws RecognitionException {
		ValidationRuleContext _localctx = new ValidationRuleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_validationRule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(T__1);
			setState(112);
			((ValidationRuleContext)_localctx).name = match(DoubleQuotedString);
			setState(113);
			context();
			setState(114);
			constraint();
			setState(117);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(115);
				match(T__2);
				setState(116);
				compoundReport();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public Token name;
		public MultipleContextParameterContext multipleContextParameter() {
			return getRuleContext(MultipleContextParameterContext.class,0);
		}

		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class, 0);
		}
		public TerminalNode DoubleQuotedString() { return getToken(BusinessRulesParser.DoubleQuotedString, 0); }
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(T__3);
			setState(120);
			((DefinitionContext)_localctx).name = match(DoubleQuotedString);
			setState(121);
			match(T__4);
			setState(122);
			multipleContextParameter();
			setState(123);
				match(T__5);
				setState(124);
				expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleSetContext extends ParserRuleContext {
		public TerminalNode DoubleQuotedString() { return getToken(BusinessRulesParser.DoubleQuotedString, 0); }
		public ModelReferenceContext modelReference() {
			return getRuleContext(ModelReferenceContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public RuleSetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleSet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterRuleSet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitRuleSet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitRuleSet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleSetContext ruleSet() throws RecognitionException {
		RuleSetContext _localctx = new RuleSetContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ruleSet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
				match(T__6);
				setState(127);
			match(DoubleQuotedString);
				setState(133);
			_la = _input.LA(1);
				if (_la == T__7) {
				{
				setState(128);
				match(T__7);
					setState(129);
					modelReference();
				setState(130);
					match(T__8);
					setState(131);
				constraint();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContextContext extends ParserRuleContext {
		public ModelReferenceParameterContext modelReferenceParameter() {
			return getRuleContext(ModelReferenceParameterContext.class,0);
		}
		public ContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_context; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ContextContext context() throws RecognitionException {
		ContextContext _localctx = new ContextContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_context);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
				match(T__9);
				setState(136);
			modelReferenceParameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultipleParameterContextContext extends ParserRuleContext {
		public MultipleContextParameterContext multipleContextParameter() {
			return getRuleContext(MultipleContextParameterContext.class,0);
		}
		public MultipleParameterContextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multipleParameterContext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).enterMultipleParameterContext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BusinessRulesListener ) ((BusinessRulesListener)listener).exitMultipleParameterContext(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BusinessRulesVisitor ) return ((BusinessRulesVisitor<? extends T>)visitor).visitMultipleParameterContext(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultipleParameterContextContext multipleParameterContext() throws RecognitionException {
		MultipleParameterContextContext _localctx = new MultipleParameterContextContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_multipleParameterContext);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
				match(T__9);
				setState(139);
			multipleContextParameter();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
